--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 **/.DS_Store
 /src/SLM/Patterns_and_Tools/Grating_Images/*
 /src/SLM/DOE_Creation/Experiments/*
+/src/SLM/DOE_Creation/Pattern_Creator/Pattern_Gui_Data/*
+/src/SLM/DOE_Creation/Pattern_Creator/Sawtooth_Pattern_Folder/*
